# ucc-vm

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
grammar/: generate  ucc_asm.bnf
grammar/src/: UccAsmBuffer.cpp  UccAsmBuffer.h
include/: Number.h  UccUtils.h
include/linker/: Assembler.h  Linker.h
include/vm/: ArithmeticInstruction.h  BranchInstruction.h  CallInstruction.h  CopyInstruction.h  HaltInstruction.h  Instruction.h  InstructionSet.h  JumpInstruction.h  JumpRegisterInstruction.h  LabeledInstruction.h  LoadAddrInstruction.h  LoadInstruction.h  NativeCallInstruction.h  NativeFunctions.h  NopInstruction.h  NotInstruction.h  Program.h  RegisterUtils.h  SetInstruction.h  StoreInstruction.h  VMError.h  VMNativeCallStack.h  VMRegister.h  VirtualMachine.h
src/: Number.cpp  UccUtils.cpp
src/linker/: Assembler.cpp  Linker.cpp
src/vm/: ArithmeticInstruction.cpp  BranchInstruction.cpp  CallInstruction.cpp  CopyInstruction.cpp  HaltInstruction.cpp  Instruction.cpp  InstructionSet.cpp  JumpInstruction.cpp  JumpRegisterInstruction.cpp  LabeledInstruction.cpp  LoadAddrInstruction.cpp  LoadInstruction.cpp  NativeCallInstruction.cpp  NativeFunctions.cpp  NopInstruction.cpp  NotInstruction.cpp  Program.cpp  RegisterUtils.cpp  SetInstruction.cpp  StoreInstruction.cpp  VMNativeCallStack.cpp  VMRegister.cpp  VirtualMachine.cpp
test/: .gitignore  Makefile  link.cpp  run.cpp
test/asm/: Makefile  run  test1.asm  test2.asm
test/asm/multifile/: Makefile  bar.asm  foo.asm  main.asm  run
